--- a/package.json
+++ b/package.json
@@ -67,9 +67,10 @@
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
     "tsx": "^4.5.0",
-    "typescript": "^5.2.2"
+    "typescript": "~5.2.2"
   },
   "dependencies": {
+    "chalk": "^5.4.1",
     "commander": "^11.1.0"
   },
   "lint-staged": {
